feat: add vk swith btn & card

--- a/assets/l10n/report.html
+++ b/assets/l10n/report.html
@@ -19,18 +19,15 @@ pre { white-space: pre-wrap;}
 </head>
 <body>
 <h1>L10n Report</h1>
-<h4>Release Date: 2023-06-12   15:28:56</h4>
+<h4>Release Date: 2023-06-12   17:44:03</h4>
 <h2 style="color: darkgreen; margin-top: 1em">New Keys:</h2>
           <h3>assets/l10n/ru_RU.json</h3>
 <section class='accordion'>
 <input type='checkbox' id='check-0'/>
-<label for='check-0'><b>Total:</b> 4</label>
+<label for='check-0'><b>Total:</b> 1</label>
 <article>
 <pre>
-app_title
-etc_tab_title
-search_tab_title
-teammates_tab_title
+search_button_description
 </pre>
 </article>
 </section>
