--- a/assets/l10n/report.html
+++ b/assets/l10n/report.html
@@ -19,7 +19,18 @@ pre { white-space: pre-wrap;}
 </head>
 <body>
 <h1>L10n Report</h1>
-<h4>Release Date: 2023-06-14   12:42:26</h4>
+<h4>Release Date: 2023-06-14   23:40:46</h4>
 <h2 style="color: darkgreen; margin-top: 1em">New Keys:</h2>
-<h2 style="color: darkred; margin-top: 3em;">Deleted Keys:</h2></body>
+          <h3>assets/l10n/ru_RU.json</h3>
+<section class='accordion'>
+<input type='checkbox' id='check-0'/>
+<label for='check-0'><b>Total:</b> 2</label>
+<article>
+<pre>
+hide
+message
+</pre>
+</article>
+</section>
+      <h2 style="color: darkred; margin-top: 3em;">Deleted Keys:</h2></body>
 </html>
